<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signUpBackground"
    tools:context=".signUpActivity">

    <AutoCompleteTextView
        android:id="@+id/signUp_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textIsSelectable="false"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/signUp_emailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailIdHint"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:imeOptions="actionNext"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_username"
         />

    <EditText
        android:id="@+id/signUp_password"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:imeOptions="actionNext"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_emailId"/>

    <EditText
        android:id="@+id/signUp_confirm_password"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_password"/>

    <Button
        android:id="@+id/signUp_signUpButton"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/list_selector_background"
        android:onClick=""
        android:text="@string/signUpButton"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUp_confirm_password" />
</android.support.constraint.ConstraintLayout>